test/Fail/CyclicModuleDependency2.agda
module CyclicModuleDependency2 where

import CyclicModuleDependency3
